Enhance server and client configurations: Update env.example for clarity, improve server logging and error handling, prevent duplicate logout calls in auth store, and refine API response handling to avoid 304 errors.
need to check as well

--- a/project/env.example
+++ b/project/env.example
@@ -1,4 +1,4 @@
-# Supabase Configuration
+# Supabase Configuration (for Backend/Server)
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
@@ -9,8 +9,18 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend Environment Variables (for Vite)
-# Create a .env file in the root with VITE_ prefix for these:
-# VITE_SUPABASE_URL=your_supabase_project_url
-# VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-# VITE_API_URL=http://localhost:5000/api
+# These should be in a .env file in the project root (same level as package.json)
+# IMPORTANT: VITE_API_URL should point to the BACKEND server (port 5000), NOT the frontend (port 3000)!
+# 
+# Option 1 (Recommended for local dev): Don't set VITE_API_URL at all
+#   - This uses relative '/api' which Vite proxies to http://localhost:5000
+#
+# Option 2: Set VITE_API_URL=http://localhost:5000/api
+#   - Direct connection to backend (bypasses Vite proxy)
+#
+# DO NOT set VITE_API_URL=http://localhost:3000 - that's the frontend dev server!
+
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# VITE_API_URL=http://localhost:5000/api  # Optional - only if you want direct connection (not recommended for local dev)
 
