--- a/project/package.json
+++ b/project/package.json
@@ -7,8 +7,7 @@
     "dev:server": "node --watch server/index.js",
     "dev:client": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "postinstall": "npm install --include=dev"
+    "preview": "vite preview"
 
   },
   "dependencies": {
